Work around `30-infinality-aliases.conf` issue
I use `30-infinality-aliases.conf` [1] via the `fonts-meta-extended-lt`
[2] package.  This Fontconfig configuration file defines some generic
aliases which, I think, shouldn't be done from a file whose name starts
with "30" (see [3]) and causes problems.

[1]: https://gist.githubusercontent.com/cryzed/4f64bb79e80d619866ee0b18ba2d32fc/raw/bd073b52365393f9f0718425271825fc27b218f7/local.conf
[2]: https://aur.archlinux.org/packages/fonts-meta-extended-lt
[3]: http://linuxfromscratch.org/blfs/view/stable/x/tuning-fontconfig.html

--- a/home/config/fontconfig/fonts.conf
+++ b/home/config/fontconfig/fonts.conf
@@ -1,29 +1,35 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-   <alias>
-      <family>serif</family>
-      <prefer>
-         <family>Noto Serif CJK TC</family>
-         <family>Noto Color Emoji</family>
-         <family>Noto Serif</family>
-      </prefer>
-   </alias>
-   <alias>
-      <family>sans-serif</family>
-      <prefer>
-         <family>Ubuntu</family>
-         <family>Noto Sans CJK TC</family>
-         <family>Noto Color Emoji</family>
-         <family>Noto Sans</family>
-      </prefer>
-   </alias>
-   <alias>
-      <family>monospace</family>
-      <prefer>
-         <family>Ubuntu Mono</family>
-         <family>Noto Sans Mono CJK TC</family>
-         <family>Noto Sans Mono</family>
-      </prefer>
-   </alias>
+   <match target="pattern">
+      <test name="family">
+         <string>serif</string>
+      </test>
+      <edit name="family" mode="prepend_first">
+         <string>Noto Serif CJK TC</string>
+         <string>Noto Color Emoji</string>
+         <string>Noto Serif</string>
+      </edit>
+   </match>
+   <match target="pattern">
+      <test name="family">
+         <string>sans-serif</string>
+      </test>
+      <edit name="family" mode="prepend_first">
+         <string>Ubuntu</string>
+         <string>Noto Sans CJK TC</string>
+         <string>Noto Color Emoji</string>
+         <string>Noto Sans</string>
+      </edit>
+   </match>
+   <match target="pattern">
+      <test name="family">
+         <string>monospace</string>
+      </test>
+      <edit name="family" mode="prepend_first">
+         <string>Ubuntu Mono</string>
+         <string>Noto Sans Mono CJK TC</string>
+         <string>Noto Sans Mono</string>
+      </edit>
+   </match>
 </fontconfig>
