Add TODO comment

--- a/home/config/fontconfig/fonts.conf
+++ b/home/config/fontconfig/fonts.conf
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
+   <!-- TODO: `target="pattern"` is optional, right?  Remove it? -->
    <match target="pattern">
       <test name="family">
          <string>serif</string>
