Remove unneeded XML attributes from `fonts.conf`
The default value for the "target" attribute is already "pattern".  See
fonts-conf(5).

--- a/home/config/fontconfig/fonts.conf
+++ b/home/config/fontconfig/fonts.conf
@@ -1,8 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-   <!-- TODO: `target="pattern"` is optional, right?  Remove it? -->
-   <match target="pattern">
+   <match>
       <test name="family">
          <string>serif</string>
       </test>
@@ -12,7 +11,7 @@
          <string>Noto Serif</string>
       </edit>
    </match>
-   <match target="pattern">
+   <match>
       <test name="family">
          <string>sans-serif</string>
       </test>
@@ -23,7 +22,7 @@
          <string>Noto Sans</string>
       </edit>
    </match>
-   <match target="pattern">
+   <match>
       <test name="family">
          <string>monospace</string>
       </test>
