Add mysterious snippet to `fonts.conf`

--- a/home/config/fontconfig/fonts.conf
+++ b/home/config/fontconfig/fonts.conf
@@ -1,6 +1,21 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
+   <!--
+   From where did I snatch this?  From `30-infinality-aliases.conf`?  Or maybe from
+   <https://wiki.archlinux.org/index.php/Font_configuration/Examples#Japanese>?  Or from
+   `45-generic.conf`?
+   -->
+   <!--
+   <match>
+      <test name="family">
+	 <string>serif</string>
+      </test>
+      <edit name="family" mode="prepend">
+         <string>Noto Color Emoji</string>
+      </edit>
+   </match>
+   -->
    <match>
       <test name="family">
          <string>serif</string>
