Use "Roboto Slab" as the default serif typeface
https://en.wikipedia.org/wiki/Roboto#Roboto_Slab
https://fonts.google.com/specimen/Roboto+Slab

--- a/home/config/fontconfig/fonts.conf
+++ b/home/config/fontconfig/fonts.conf
@@ -6,6 +6,7 @@
          <string>serif</string>
       </test>
       <edit name="family" mode="prepend_first">
+         <string>Roboto Slab</string>
          <string>Noto Serif CJK TC</string>
          <string>Noto Color Emoji</string>
          <string>Noto Serif</string>
