Change some single quotes to double quotes
Consistently use double quotes in `30-infinality-aliases.conf`.

--- a/home/config/fontconfig/conf.d/30-infinality-aliases.conf
+++ b/home/config/fontconfig/conf.d/30-infinality-aliases.conf
@@ -1,5 +1,5 @@
-<?xml version='1.0'?>
-<!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
+<?xml version="1.0"?>
+<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
   <!-- Replacements from http://bohoomil.com/doc/05-fonts/ (until ibfonts-meta-extended) -->
   <alias>
