--- a/home/config/fontconfig/fonts.conf
+++ b/home/config/fontconfig/fonts.conf
@@ -1,36 +1,30 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-   <match>
-      <test name="family">
-         <string>serif</string>
-      </test>
-      <edit name="family" mode="prepend_first">
-         <string>Roboto Slab</string>
-         <string>Noto Serif CJK TC</string>
-         <string>Noto Color Emoji</string>
-         <string>Noto Serif</string>
-      </edit>
-   </match>
-   <match>
-      <test name="family">
-         <string>sans-serif</string>
-      </test>
-      <edit name="family" mode="prepend_first">
-         <string>Ubuntu</string>
-         <string>Noto Sans CJK TC</string>
-         <string>Noto Color Emoji</string>
-         <string>Noto Sans</string>
-      </edit>
-   </match>
-   <match>
-      <test name="family">
-         <string>monospace</string>
-      </test>
-      <edit name="family" mode="prepend_first">
-         <string>Ubuntu Mono</string>
-         <string>Noto Sans Mono CJK TC</string>
-         <string>Noto Sans Mono</string>
-      </edit>
-   </match>
+   <alias>
+      <family>serif</family>
+      <prefer>
+         <family>Roboto Slab</family>
+         <family>Noto Serif CJK TC</family>
+         <family>Noto Color Emoji</family>
+         <family>Noto Serif</family>
+      </prefer>
+   </alias>
+   <alias>
+      <family>sans-serif</family>
+      <prefer>
+         <family>Ubuntu</family>
+         <family>Noto Sans CJK TC</family>
+         <family>Noto Color Emoji</family>
+         <family>Noto Sans</family>
+      </prefer>
+   </alias>
+   <alias>
+      <family>monospace</family>
+      <prefer>
+         <family>Ubuntu Mono</family>
+         <family>Noto Sans Mono CJK TC</family>
+         <family>Noto Sans Mono</family>
+      </prefer>
+   </alias>
 </fontconfig>
