Add current Irssi `config` file
I'm about to change my Irssi configuration because I can't connect to
Freenode.  Make sure the current configuration is safe.  The file is
encrypted with [git-crypt][1].

[1]: https://github.com/AGWA/git-crypt

--- a/home/.gitattributes
+++ b/home/.gitattributes
@@ -5,3 +5,4 @@ mutt/aliases filter=git-crypt diff=git-crypt
 mutt/per-recipient-rules filter=git-crypt diff=git-crypt
 vim/spell/de.utf-8.add filter=git-crypt diff=git-crypt
 vim/spell/en.utf-8.add filter=git-crypt diff=git-crypt
+irssi/config filter=git-crypt diff=git-crypt
