Newsboat: immediately show query feeds on startup
There was always a delay before my "YouTube" query feed appeared when
starting Newsboat.  Setting `prepopulate-query-feeds` to `yes` resolves
this.

--- a/home/config/newsboat/config
+++ b/home/config/newsboat/config
@@ -2,6 +2,7 @@ browser "nohup $FIREFOX --new-tab %u &>/dev/null &"
 datetime-format "%F"  # ISO 8601
 refresh-on-startup yes
 reload-threads 42
+prepopulate-query-feeds yes
 swap-title-and-hints yes  # Like Mutt.
 # Also download ignored articles, just don't display them.  See
 # <fle:///usr/share/doc/newsboat/newsboat.html#_killfiles>.
