Add keybind that starts htop in a floating xterm

--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -171,5 +171,6 @@ assign [class="^Firefox$"] 1
 assign [class="^Firefox Developer Edition$"] 1
 
 for_window [instance="^vimsel$"] floating enable
+for_window [instance="^floating htop$"] floating enable
 
 # vim: tw=90 sts=-1 sw=3 et fdm=marker
