--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -172,5 +172,6 @@ assign [class="^Firefox Developer Edition$"] 1
 
 for_window [instance="^vimsel$"] floating enable
 for_window [instance="^floating htop$"] floating enable
+for_window [instance="^floating xterm$"] floating enable
 
 # vim: tw=90 sts=-1 sw=3 et fdm=marker
