--- a/home/.gitattributes
+++ b/home/.gitattributes
@@ -6,3 +6,4 @@ mutt/per-recipient-rules filter=git-crypt diff=git-crypt
 vim/spell/de.utf-8.add filter=git-crypt diff=git-crypt
 vim/spell/en.utf-8.add filter=git-crypt diff=git-crypt
 irssi/config filter=git-crypt diff=git-crypt
+ssh/config filter=git-crypt diff=git-crypt
