--- a/home/config/newsboat/config
+++ b/home/config/newsboat/config
@@ -2,6 +2,7 @@ browser "nohup $FIREFOX --new-tab %u &>/dev/null &"
 datetime-format "%F"  # ISO 8601
 refresh-on-startup yes
 reload-threads 42
+auto-reload yes
 reload-time 30
 prepopulate-query-feeds yes
 show-keymap-hint no
