--- a/home/config/newsboat/config
+++ b/home/config/newsboat/config
@@ -92,8 +92,8 @@ bind-key O open-all-unread-in-browser feedlist
 
 # Open the URL associated with the current article with mpv(1).  See [1] and [2].  XXX: I
 # hope Newsboat sanitizes `%u`.
-macro o set browser ~/.config/newsboat/mpv.sh ; open-in-browser-and-mark-read ; set browser $BROWSER
-macro O set browser ~/.config/newsboat/mpv.sh ; open-in-browser ; set browser $BROWSER
+macro o set browser ~/.config/newsboat/mpv.sh ; open-in-browser ; set browser $BROWSER
+macro O set browser ~/.config/newsboat/mpv.sh ; open-in-browser-and-mark-read ; set browser $BROWSER
 # [1]: https://wiki.archlinux.org/index.php/Newsbeuter#Pass_article_URL_to_external_command.
 # [2]: file:///usr/share/doc/newsboat/newsboat.html#_macro_support
 
