Add submodule for buku package build
This looks neat, let's try it out.

https://aur.archlinux.org/packages/buku
https://github.com/jarun/Buku

--- a/.gitmodules
+++ b/.gitmodules
@@ -139,3 +139,6 @@
 [submodule "misc/git-snap"]
 	path = misc/git-snap
 	url = https://github.com/meribold/git-snap.git
+[submodule "misc/AUR/buku"]
+	path = misc/AUR/buku
+	url = https://aur.archlinux.org/buku.git
