--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -128,6 +128,10 @@ mode "resize" {
 # Resize mode.
 bindsym $mod+w mode "resize"
 
+# See <https://i3wm.org/docs/userguide.html#_layout_mode_for_new_containers>.  Use the
+# `tabbed` layout by default.
+workspace_layout tabbed
+
 new_window pixel 1
 new_float pixel 1
 
