--- a/home/.gitattributes
+++ b/home/.gitattributes
@@ -3,6 +3,8 @@ config/newsboat/urls filter=git-crypt diff=git-crypt
 config/signal/init.bash filter=git-crypt diff=git-crypt
 mutt/aliases filter=git-crypt diff=git-crypt
 mutt/per-recipient-rules filter=git-crypt diff=git-crypt
+neomutt/aliases filter=git-crypt diff=git-crypt
+neomutt/per-recipient-rules filter=git-crypt diff=git-crypt
 vim/spell/de.utf-8.add filter=git-crypt diff=git-crypt
 vim/spell/en.utf-8.add filter=git-crypt diff=git-crypt
 irssi/config filter=git-crypt diff=git-crypt
