--- a/home/.gitattributes
+++ b/home/.gitattributes
@@ -5,6 +5,8 @@ mutt/aliases filter=git-crypt diff=git-crypt
 mutt/per-recipient-rules filter=git-crypt diff=git-crypt
 neomutt/aliases filter=git-crypt diff=git-crypt
 neomutt/per-recipient-rules filter=git-crypt diff=git-crypt
+config/neomutt/aliases filter=git-crypt diff=git-crypt
+config/neomutt/per-recipient-rules filter=git-crypt diff=git-crypt
 vim/spell/de.utf-8.add filter=git-crypt diff=git-crypt
 vim/spell/en.utf-8.add filter=git-crypt diff=git-crypt
 irssi/config filter=git-crypt diff=git-crypt
