--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -181,4 +181,10 @@ for_window [instance="^newsboat$"] move scratchpad
 for_window [instance="^newsboat$"] sticky enable
 for_window [instance="^newsboat$"] scratchpad show
 
+# Use a sticky scratchpad window for IPython (my current calculator of choice).
+for_window [instance="^ipython$"] floating enable
+for_window [instance="^ipython$"] move scratchpad
+for_window [instance="^ipython$"] sticky enable
+for_window [instance="^ipython$"] scratchpad show
+
 exec --no-startup-id ~/dotfiles/home/config/i3/startup.sh
