Tweak mpv keybindings
I need mpv to match my YouTube muscle memory...

--- a/home/config/mpv/input.conf
+++ b/home/config/mpv/input.conf
@@ -6,8 +6,13 @@ WHEEL_DOWN   ignore
 WHEEL_LEFT   seek -5
 WHEEL_RIGHT  seek  5
 
-h  seek -5
-l  seek  5
+# These three keybindings reproduce the behavior of the YouTube web player.
+j  seek -10
+k  cycle pause
+l  seek 10
+
+h  seek -10
 
 H  seek -1 exact
+J  seek -1 exact
 L  seek  1 exact
