Configure how Beets constructs file paths
https://beets.readthedocs.io/en/latest/reference/config.html#replace
https://beets.readthedocs.io/en/latest/reference/config.html#path-format-configuration
https://beets.readthedocs.io/en/latest/reference/pathformat.html

--- a/home/config/beets/config.yaml
+++ b/home/config/beets/config.yaml
@@ -4,3 +4,18 @@ asciify_paths: yes
 
 import:
     timid: yes
+
+# See <https://beets.readthedocs.io/en/latest/reference/config.html#replace>.
+replace:
+    '[\\/]': '-'
+    '^\.': '-'
+    '[\x00-\x1f]': '-'
+    '[<>:"\?\*\|]': '-'
+    '\.$': '-'
+    '\s+$': ''
+    '^\s+': ''
+    '\s': '_'
+
+# See <https://beets.readthedocs.io/en/latest/reference/config.html#path-format-configuration>.
+paths:
+    default: %lower{$albumartist/$album%aunique{}/$track-$title}
