Expand Beets configuration
https://beets.readthedocs.io/en/latest/reference/config.html#path-format-configuration

--- a/home/config/beets/config.yaml
+++ b/home/config/beets/config.yaml
@@ -16,6 +16,7 @@ replace:
 # See <https://beets.readthedocs.io/en/latest/reference/config.html#path-format-configuration>.
 paths:
     default: %lower{$albumartist/$album%aunique{}/$track-$title}
+    singleton: non-album/%lower{$artist/$title}
 
 embedart:
     # "Avoid embedding album art for files that already have art embedded."  See
