Beets: fix `/` in tags not mapping to `-` in paths
Apparently we need to use the secret `path_sep_replace` option.  See
<https://github.com/beetbox/beets/issues/323>.

--- a/home/config/beets/config.yaml
+++ b/home/config/beets/config.yaml
@@ -1,6 +1,8 @@
 directory: ~/music
 plugins: beatport info edit fetchart embedart
 asciify_paths: yes
+# See <https://github.com/beetbox/beets/issues/323>.
+path_sep_replace: '-'
 
 import:
     timid: yes
