Improve Super+backtick keybind
Cope when the xterm and/or the Screen session doesn't exist.

--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -75,9 +75,6 @@ bindsym $mod+d focus child
 # Make the currently focused window a scratchpad.
 bindsym $mod+Shift+grave move scratchpad
 
-# Show the first scratchpad window.
-bindsym $mod+grave [instance="^scratchpad$"] scratchpad show
-
 # Don't comply when programs request to be focused.  Firefox does that when I open an
 # article's associated URL in Newsboat, for example, and it's annoying.
 focus_on_window_activation urgent
@@ -186,5 +183,8 @@ for_window [instance="^ghci$"] floating enable
 for_window [instance="^ghci$"] move scratchpad
 for_window [instance="^ghci$"] sticky enable
 for_window [instance="^ghci$"] scratchpad show
+
+for_window [instance="^scratchpad$"] move scratchpad
+for_window [instance="^scratchpad$"] scratchpad show
 
 exec --no-startup-id ~/dotfiles/home/config/i3/startup.sh
