XBindKeys, i3: change ncmpcpp keybind
I experimented with different keybinds for starting ncmpcpp for a while
but never committed anything.

--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -187,4 +187,8 @@ for_window [instance="^ghci$"] scratchpad show
 for_window [instance="^scratchpad$"] move scratchpad
 for_window [instance="^scratchpad$"] scratchpad show
 
+for_window [instance="^ncmpcpp$"] move scratchpad
+for_window [instance="^ncmpcpp$"] sticky enable
+for_window [instance="^ncmpcpp$"] scratchpad show
+
 exec --no-startup-id ~/dotfiles/home/config/i3/startup.sh
