Add keybind turning PRIMARY selection into QR code
Add a keybind for creating and displaying a QR code based on the
contents of the X PRIMARY selection.

https://en.wikipedia.org/wiki/X_Window_selection
https://en.wikipedia.org/wiki/QR_code

--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -191,4 +191,8 @@ for_window [instance="^ncmpcpp$"] move scratchpad
 for_window [instance="^ncmpcpp$"] sticky enable
 for_window [instance="^ncmpcpp$"] scratchpad show
 
+# This enhances a keybind defined in `home/xbindkeysrc`.  TODO: set the keybind up here
+# and don't use XBindKeys for this one?
+for_window [class= "^feh$" instance="^feh$" title="^feh \[1 of 1\] - /tmp/qrencode\....\.png$"] floating enable
+
 exec --no-startup-id ~/dotfiles/home/config/i3/startup.sh
