Fix Super+F keybind
Apparently the X resources class of Firefox Developer Edition changed:

    $ xprop | grep WM_CLASS
    WM_CLASS(STRING) = "Navigator", "firefoxdeveloperedition"

--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -160,7 +160,7 @@ smart_gaps on
 # Always start Firefox on workspace 1 so I can switch to another workspace while waiting
 # for it to start.  See <http://i3wm.org/docs/userguide.html#assign_workspace>.
 assign [class="^Firefox$"] 1
-assign [class="^Firefox Developer Edition$"] 1
+assign [class="^firefoxdeveloperedition$"] 1
 
 for_window [instance="^vimsel$"] floating enable
 for_window [instance="^floating xterm$"] floating enable
