--- a/.gitmodules
+++ b/.gitmodules
@@ -136,3 +136,6 @@
 [submodule "misc/AUR/buku"]
 	path = misc/AUR/buku
 	url = https://aur.archlinux.org/buku.git
+[submodule "misc/AUR/auracle-git"]
+	path = misc/AUR/auracle-git
+	url = https://aur.archlinux.org/auracle-git.git
